Fixed white header on iPhone

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ h2 {
     margin-top: 10px;
 }
 
-html {    height: 100%;    }
+html {    height: 100%;  background-color: #1e1e2d;   }
 
 body {
     font-family: Arial, sans-serif;
